xorg-server/makelog.txt
Making all in doc
make[1]: Entering directory '/home/via/prog/xserver/xorg-server-1.20.10/doc'
Making all in dtrace
make[2]: Entering directory '/home/via/prog/xserver/xorg-server-1.20.10/doc/dtrace'
make[2]: Nothing to be done for 'all'.
make[2]: Leaving directory '/home/via/prog/xserver/xorg-server-1.20.10/doc/dtrace'
make[2]: Entering directory '/home/via/prog/xserver/xorg-server-1.20.10/doc'
make[2]: Nothing to be done for 'all-am'.
make[2]: Leaving directory '/home/via/prog/xserver/xorg-server-1.20.10/doc'
make[1]: Leaving directory '/home/via/prog/xserver/xorg-server-1.20.10/doc'
Making all in man
make[1]: Entering directory '/home/via/prog/xserver/xorg-server-1.20.10/man'
make[1]: Nothing to be done for 'all'.
make[1]: Leaving directory '/home/via/prog/xserver/xorg-server-1.20.10/man'
Making all in include
make[1]: Entering directory '/home/via/prog/xserver/xorg-server-1.20.10/include'
make  all-am
make[2]: Entering directory '/home/via/prog/xserver/xorg-server-1.20.10/include'
make[2]: Leaving directory '/home/via/prog/xserver/xorg-server-1.20.10/include'
make[1]: Leaving directory '/home/via/prog/xserver/xorg-server-1.20.10/include'
Making all in dix
make[1]: Entering directory '/home/via/prog/xserver/xorg-server-1.20.10/dix'
make  all-am
make[2]: Entering directory '/home/via/prog/xserver/xorg-server-1.20.10/dix'
  CC       atom.lo
  CC       colormap.lo
In file included from ../include/windowstr.h:51,
                 from colormap.c:63:
../include/pixmapstr.h:94:5: error: unknown type name ‘DamagePtr’
   94 |     DamagePtr damage;
      |     ^~~~~~~~~
make[2]: *** [Makefile:783: colormap.lo] Error 1
make[2]: Leaving directory '/home/via/prog/xserver/xorg-server-1.20.10/dix'
make[1]: *** [Makefile:658: all] Error 2
make[1]: Leaving directory '/home/via/prog/xserver/xorg-server-1.20.10/dix'
make: *** [Makefile:817: all-recursive] Error 1
